Index, metrics data, and hub menu z-index fixes

--- a/management/server/webui/src/main/webapp/css/style.css
+++ b/management/server/webui/src/main/webapp/css/style.css
@@ -39,7 +39,7 @@ input[type=checkbox] {
 	position: absolute;
 	top: 27px;
 	right: 30px;
-	z-index: 10;
+	z-index: 3;
 }
 
 .b-header {
